tmp/Terminal Saved OutputAQug.txt
Last login: Fri Jul 28 14:10:40 on ttys001
(base) alaa@frizzle-06 run_01 % conda activate cleanROOTPythia
(cleanROOTPythia) alaa@frizzle-06 run_01 % python ev.py                  
i:  1 Pt,   73.81852741677554  Event#:   1041 Particle#  1061  production vertex GenVertex(FourVector(1.47, 8.29, 0.723, 8.45))
i:  2 Pt,   86.82745552176779  Event#:   1755 Particle#  2017  production vertex GenVertex(FourVector(-46.6, -13.7, 56.9, 74.8))
i:  3 Pt,   133.46263922585857  Event#:   1214 Particle#  1861  production vertex GenVertex(FourVector(-6.92, -32.8, -12.7, 47))
i:  4 Pt,   188.65155086192487  Event#:   1062 Particle#  1035  production vertex GenVertex(FourVector(0, 0, 0, 0))
i:  5 Pt,   65.34797701645893  Event#:   480 Particle#  1987  production vertex GenVertex(FourVector(5.9, -1.56, 29.3, 32.7))
i:  6 Pt,   66.47978067642784  Event#:   2340 Particle#  766  production vertex GenVertex(FourVector(12.9, -12.4, 12.6, 21.9))
i:  7 Pt,   469.72114568344665  Event#:   246 Particle#  1414  production vertex GenVertex(FourVector(-7.73, 12.3, -8.13, 18.6))
i:  8 Pt,   192.80337882377853  Event#:   1209 Particle#  1150  production vertex GenVertex(FourVector(-9.43, -3.5, -4.56, 11.4))
Info in <TCanvas::Print>: pdf file pt_NonSignal_Cut.pdf has been created
(cleanROOTPythia) alaa@frizzle-06 run_01 % python pr.py
  File "/Users/alaa/Downloads/MG5_aMC_v3_5_0/valid_0.1ns_400GeV_mu_ve/Events/run_01/pr.py", line 74
    """
    ^
IndentationError: expected an indented block after 'for' statement on line 73
(cleanROOTPythia) alaa@frizzle-06 run_01 % python pr.py
  File "/Users/alaa/Downloads/MG5_aMC_v3_5_0/valid_0.1ns_400GeV_mu_ve/Events/run_01/pr.py", line 146
    """
IndentationError: unexpected indent
(cleanROOTPythia) alaa@frizzle-06 run_01 % python pr.py
Traceback (most recent call last):
  File "/Users/alaa/Downloads/MG5_aMC_v3_5_0/valid_0.1ns_400GeV_mu_ve/Events/run_01/pr.py", line 14, in <module>
    histDeltaPhi= ROOT.TH1F("dPhi_distribution", "Delta Phi Distribution", 100, -7, 7)
                  ^^^^
NameError: name 'ROOT' is not defined
(cleanROOTPythia) alaa@frizzle-06 run_01 % python pr.py
Info in <TCanvas::Print>: pdf file delta_Phi_line_true.pdf has been created
Info in <TCanvas::Print>: pdf file Phi_true.pdf has been created
Info in <TCanvas::Print>: pdf file eta1_true.pdf has been created
Info in <TCanvas::Print>: pdf file eta2_true.pdf has been created
Info in <TCanvas::Print>: pdf file deltaR_true.pdf has been created
(cleanROOTPythia) alaa@frizzle-06 run_01 % python ev.py
i:  1 Pt,   73.81852741677554    particle:   GenParticle(FourVector(13, 72.7, 4.23, 73.9), mass=0.10566, pid=-13, status=1) Event#:   1041 Particle#  1061  production vertex GenVertex(FourVector(1.47, 8.29, 0.723, 8.45))
i:  2 Pt,   86.82745552176779    particle:   GenParticle(FourVector(-83.4, -24.1, 102, 134), mass=0.10566, pid=-13, status=1) Event#:   1755 Particle#  2017  production vertex GenVertex(FourVector(-46.6, -13.7, 56.9, 74.8))
i:  3 Pt,   133.46263922585857    particle:   GenParticle(FourVector(-32.6, -129, 18.5, 135), mass=0.10566, pid=13, status=1) Event#:   1214 Particle#  1861  production vertex GenVertex(FourVector(-6.92, -32.8, -12.7, 47))
i:  4 Pt,   188.65155086192487    particle:   GenParticle(FourVector(170, -81.5, 17.8, 189), mass=0.10566, pid=-13, status=1) Event#:   1062 Particle#  1035  production vertex GenVertex(FourVector(0, 0, 0, 0))
i:  5 Pt,   65.34797701645893    particle:   GenParticle(FourVector(65.3, -3.57, 148, 162), mass=0.10566, pid=13, status=1) Event#:   480 Particle#  1987  production vertex GenVertex(FourVector(5.9, -1.56, 29.3, 32.7))
i:  6 Pt,   66.47978067642784    particle:   GenParticle(FourVector(46.7, -47.3, 45.7, 80.7), mass=0.10566, pid=13, status=1) Event#:   2340 Particle#  766  production vertex GenVertex(FourVector(12.9, -12.4, 12.6, 21.9))
i:  7 Pt,   469.72114568344665    particle:   GenParticle(FourVector(-301, 361, -121, 485), mass=0.10566, pid=13, status=1) Event#:   246 Particle#  1414  production vertex GenVertex(FourVector(-7.73, 12.3, -8.13, 18.6))
i:  8 Pt,   192.80337882377853    particle:   GenParticle(FourVector(-173, -85.2, -49.3, 199), mass=0.10566, pid=-13, status=1) Event#:   1209 Particle#  1150  production vertex GenVertex(FourVector(-9.43, -3.5, -4.56, 11.4))
Info in <TCanvas::Print>: pdf file pt_NonSignal_Cut.pdf has been created
(cleanROOTPythia) alaa@frizzle-06 run_01 % python pr.py
Info in <TCanvas::Print>: pdf file delta_Phi_line_true.pdf has been created
Info in <TCanvas::Print>: pdf file Phi_true.pdf has been created
Info in <TCanvas::Print>: pdf file eta1_true.pdf has been created
Info in <TCanvas::Print>: pdf file eta2_true.pdf has been created
Info in <TCanvas::Print>: pdf file deltaR_true.pdf has been created
(cleanROOTPythia) alaa@frizzle-06 run_01 % 
